2003-02-02  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/languages/Spanish.tab: many new translations.

	* www/tracker/index.php: remove extra word.

	* www/include/languages/Base.tab: tracker_artifacttype:nobody
	New string.
	tracker:resolution Add missing string.
	tracker:date Fix spelling.

	* www/tracker/include/ArtifactTypeHtml.class: none -> nobody
	for technician.

	* www/include/exit.php(exit_assert_object): declare $Language
	as a global.
	(exit_error): use lower-case global.

	* www/themes/osx/Theme.class(listTableTop): no height attribute
	for tr tag in XHTML.

	* www/themes/kde/Theme.class(listTableTop): ditto plus remove
	erroneous </a> tag.

	* www/admin/index.php: valid XHTML 1.0 Transitional.

	* www/admin/search.php: ditto.

	* www/admin/trove/trove_cat_edit.php: ditto.

	* www/admin/massmail.php: ditto.

	* www/admin/admin_table.php: ditto.

	* www/admin/admintabfiles.php: ditto.

	* www/admin/database.php: ditto.

	* www/news/admin/index.php: ditto.


2003-02-02 Reinhard Spisser <reinhard@spisser.it>

	* www/tracker/browse.php, www/tracker/add.php,
	www/tracker/index.php, www/tracker/detail.php,
	www/tracker/taskmgr.php, www/tracker/mod.php,
	www/include/ArtifactHtml.class, www/include/ArtifactTypeHtml.class
	www/admin/index.php, www/include/languages/Base.tab,
	www/include/languages/Italian.tab
	Localization of the tracker

2003-02-01  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/project/admin/editgroupinfo.php: limit "Descriptive Group
	Name" to 40 characters (as it is limited in the database).

2003-01-30  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/themes/kde/Theme.class: Localise toolbar; change search
	button into image; minor other cleanups.

	* www/include/Layout.class: XHTML-ise search options.

	* www/themes/kde/Theme.class: new KDE-ish theme.

	* www/my/index.php: use $HTML->imgroot to get current theme's
	icons.

2003-01-29  Ryan T. Sammartino  <ryants@shaw.ca>

	* common/docman/DocumentFactory.class: fix syntax error.
